manifests/kubernetes-dashboard/a1.yaml
---
# Source: kubernetes-dashboard/charts/metrics-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-metrics-server
  namespace: default
  labels:
    helm.sh/chart: metrics-server-3.8.4
    app.kubernetes.io/name: metrics-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.6.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: metrics-server
    app.kubernetes.io/instance: release-name
---
# Source: kubernetes-dashboard/templates/services/api.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-api
    app.kubernetes.io/version: v1.0.0
    app.kubernetes.io/component: api
  name: release-name-kubernetes-dashboard-api
spec:
  ports:
    - name: api
      port: 9000
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-api
---
# Source: kubernetes-dashboard/templates/services/metrics-scraper.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
    app.kubernetes.io/version: v1.0.9
    app.kubernetes.io/component: metrics-scraper
    # TODO: kubernetes-dashboard-metrics-scraper name is currently hardcoded into the API.
    # Use same name pattern as for other deployments when this will be configurable via the API.
  name: kubernetes-dashboard-metrics-scraper
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
---
# Source: kubernetes-dashboard/templates/services/web.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-web
    app.kubernetes.io/version: v1.0.0
    app.kubernetes.io/component: web
  name: release-name-kubernetes-dashboard-web
spec:
  ports:
    - name: web
      port: 8000
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-web
---
# Source: kubernetes-dashboard/charts/metrics-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-metrics-server
  namespace: default
  labels:
    helm.sh/chart: metrics-server-3.8.4
    app.kubernetes.io/name: metrics-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.6.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metrics-server
        app.kubernetes.io/instance: release-name
    spec:
      schedulerName: 
      serviceAccountName: release-name-metrics-server
      priorityClassName: "system-cluster-critical"
      containers:
        - name: metrics-server
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: registry.k8s.io/metrics-server/metrics-server:v0.6.2
          imagePullPolicy: IfNotPresent
          args:
            - --secure-port=4443
            - --cert-dir=/tmp
            - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
            - --kubelet-use-node-status-port
            - --metric-resolution=15s
            - --kubelet-preferred-address-types=InternalIP
            - --kubelet-insecure-tls
          ports:
          - name: https
            protocol: TCP
            containerPort: 4443
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /livez
              port: https
              scheme: HTTPS
            initialDelaySeconds: 0
            periodSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
# Source: kubernetes-dashboard/templates/deployments/api.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-api
    app.kubernetes.io/version: v1.0.0
    app.kubernetes.io/component: api
  name: release-name-kubernetes-dashboard-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: kubernetes-dashboard
      app.kubernetes.io/name: kubernetes-dashboard-api
  template:
    metadata:
      labels:
        helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: kubernetes-dashboard
        app.kubernetes.io/name: kubernetes-dashboard-api
        app.kubernetes.io/version: v1.0.0
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: kubernetes-dashboard-api
          image: "docker.io/kubernetesui/dashboard-api:v1.0.0"
          imagePullPolicy: IfNotPresent
          args:
            - --enable-insecure-login
            - --namespace=default
          ports:
          
            - containerPort: 9000
              name: api
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume

      serviceAccountName: release-name-kubernetes-dashboard
---
# Source: kubernetes-dashboard/templates/deployments/metrics-scraper.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
    app.kubernetes.io/version: v1.0.9
    app.kubernetes.io/component: metrics-scraper
  # TODO: dashboard-metrics-scraper name is currently hardcoded into the API.
  # Use same name pattern as for other deployments when this will be configurable via the API.
  name: kubernetes-dashboard-metrics-scraper
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: kubernetes-dashboard
      app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
  template:
    metadata:
      labels:
        helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: kubernetes-dashboard
        app.kubernetes.io/name: kubernetes-dashboard-metrics-scraper
        app.kubernetes.io/version: v1.0.9
        app.kubernetes.io/component: metrics-scraper
    spec:
      containers:
        - name: kubernetes-dashboard-metrics-scraper
          image: "docker.io/kubernetesui/metrics-scraper:v1.0.9"
          imagePullPolicy: IfNotPresent
          ports:
          
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi
          livenessProbe:
          
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 30
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume
      nodeSelector:
      
        kubernetes.io/os: linux

      serviceAccountName: release-name-kubernetes-dashboard
---
# Source: kubernetes-dashboard/templates/deployments/web.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-web
    app.kubernetes.io/version: v1.0.0
    app.kubernetes.io/component: web
  name: release-name-kubernetes-dashboard-web
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/part-of: kubernetes-dashboard
      app.kubernetes.io/name: kubernetes-dashboard-web
  template:
    metadata:
      labels:
        helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: kubernetes-dashboard
        app.kubernetes.io/name: kubernetes-dashboard-web
        app.kubernetes.io/version: v1.0.0
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: kubernetes-dashboard-web
          image: "docker.io/kubernetesui/dashboard-web:v1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
          
            - containerPort: 8000
              name: web
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume
      nodeSelector:
      
        kubernetes.io/os: linux

      serviceAccountName: release-name-kubernetes-dashboard
---
# Source: kubernetes-dashboard/templates/networking/ingress.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    helm.sh/chart: kubernetes-dashboard-7.0.0-alpha0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubernetes-dashboard
  annotations:
    cert-manager.io/issuer: selfsigned
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: kubernetes-dashboard
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
      - localhost
      secretName: kubernetes-dashboard-certs
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-kubernetes-dashboard-web
                port:
                  name: web
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-kubernetes-dashboard-api
                port:
                  name: api
---
# Source: kubernetes-dashboard/templates/extras/clusterrole-readonly.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: kubernetes-dashboard/templates/extras/clusterrolebinding-readonly.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: kubernetes-dashboard/templates/extras/manifests.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: kubernetes-dashboard/templates/extras/servicemonitor.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: kubernetes-dashboard/templates/security/networkpolicy.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: kubernetes-dashboard/templates/security/pdb.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
